# examples

./: .gitignore  CMakeLists.txt  InterestingProgram  InterestingProgram.c  Makefile  README.md
.github/workflows/: pr-tests.yaml
AMDSIMTCFG/: AMDSIMTCFG.cpp  CMakeLists.txt
BinaryAnalysis/: Makefile
CFGraph/: CFGraph.cpp  CMakeLists.txt  README.md
DynC/: CMakeLists.txt  README.md  mutatee.cpp  mutator.cpp
InstrumentFunction/: InterestingProgram.cpp  Makefile
InstrumentMemoryAccess/: Makefile
MaxArg/: Makefile
ReTee/: Makefile
binaryAnalysis/: CMakeLists.txt
branchInfo/: CMakeLists.txt  branchInfo.cpp
branchInfo/reference/: 1-908.gpubin  1.out  2-90a.gpubin  2.out  3-940.gpubin  3.out
codeCoverage/: CMakeLists.txt  Inst.C  Inst.h  README  README.md  code_coverage.C  external.C  libInst.C  libInst.h  libtestcc.c  testcc.C  testcc.c
code_patching/: InterestingProgram  Makefile  README.md  condbreak.c  proccounting  proccounting.c
common/: README.md
common/mutatees/: InterestingProgram.cpp
dataflowAPI/: CMakeLists.txt  README.md  liveness.cpp  slicing.cpp  stack_analysis.cpp  symbolic_evaluation.cpp
disassemble/: CMakeLists.txt  README.md  disassemble.cpp  unknown_instruction.cpp
dyninstAPI/: CMakeLists.txt  README.md  wrapFunction.cpp
functionWrapper/: CMakeLists.txt  mutator.cpp  wrappee.c  wrapper.c
insertSnippet/: CMakeLists.txt  README.md  noop_snippet.cpp  vectorAdd-gfx908  vectorAdd-gfx908.new  vectorAdd-gfx908.new.s  vectorAdd-gfx908.s
instructionAPI/: CMakeLists.txt  README.md  statefull_visitor.cpp  stateless_visitor.cpp
instrumentAFunction/: .CMakeLists.txt.swp  CMakeLists.txt  README.md  instrumenting_a_function.cpp
instrumentMemoryAccess/: CMakeLists.txt  README.md  instrumenting_memory_access.cpp
interceptOutput/: CMakeLists.txt  README.md  retee.cpp
issue1699/: CMakeLists.txt  issue1699.cpp
maxArg/: CMakeLists.txt
maxMallocSize/: CMakeLists.txt  README.md  max.cpp
memoryAccessCounter/: CMakeLists.txt  README.md  counter.cpp
parseAPI/: CMakeLists.txt  README.md  edgePredicate.cpp  loopAnalysis.cpp
parseAPI_examples/: Makefile  README.md  funcDisassemb.c  funcDisssemb  funcDisssemb.c  loopAnalysis  loopAnalysis.c  traverseCFG
patchAPI/: CFGMaker.cpp  CFGTraversal.cpp  CMakeLists.txt  PatchModifier.cpp  PointMaker.cpp  README.md  addressSpace.cpp  findingPoints.cpp  nopPatching.cpp
patchAPI_examples/: Makefile  README.md  cfgTraversal.c  mgr
proccontrol/: CMakeLists.txt  README.md  callback.cpp
readGlobalVariables/: CMakeLists.txt  README.md  globals.cpp  reader.cpp
retee/: CMakeLists.txt
slice/: CMakeLists.txt  slice.C
stackwalker/: CMakeLists.txt  README.md  complex3rdPartyWalk.cpp  determineWalkerParty.cpp  simple3rdPartyWalk.cpp  this_thread.cpp
symbolicEvalInstructions/: CMakeLists.txt  README.md  symbolic_instruction_evaluation.cpp
symtabAPI/: CMakeLists.txt  README.md  addSymbol.cpp  addType.cpp  printLineInfo.cpp  printLocalVars.cpp  printSymbols.cpp
symtabAPITest/: CMakeLists.txt  symtabAPITest.cpp
symtabAPI_examples/: Makefile  manipulateObj.c
tracetool/: CMakeLists.txt  README.md  tracelib.cpp  tracetool.cpp  userapp.cpp
unstrip/: CMakeLists.txt  README.md  callback.C  callback.h  database.C  fingerprint.C  fingerprint.h  foo.c  predicates.h  semanticDescriptor.C  test.c  types.C  unstrip.C  util.C
unusedArgs/: CMakeLists.txt  README.md  unusedArgs.C
verify_amdgpu/: 1-hipv4-amdgcn-amd-amdhsa--gfx90a  CMakeLists.txt  verify_amdgpu.cpp
